# cognitive-hydraulics

./: .gitignore  CONFIG_USAGE_VERIFICATION.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PYTHON_3_14_COMPATIBILITY.md  QUICK_START_PYTHON312.md  README.md  SETUP_PYTHON_3_12.md  TIMEOUT_FIX.md  architecture.md  implementation-roadmap.md  implementation.md  pyproject.toml  requirements.txt  setup_python312.sh  test_python312_setup.sh  verify_config_usage.py
.cursor/plans/: add-config-json-system-9ef7207b.plan.md
examples/: README.md  basic_example.py  bug_fix_example.py  learning_example.py  sort.py
src/cognitive_hydraulics/: __init__.py  __main__.py
src/cognitive_hydraulics/cli/: __init__.py  main.py
src/cognitive_hydraulics/config/: __init__.py  loader.py  settings.py
src/cognitive_hydraulics/core/: __init__.py  operator.py  state.py  verbosity.py  working_memory.py
src/cognitive_hydraulics/engine/: __init__.py  actr_resolver.py  cognitive_agent.py  evaluator.py  evolution.py  impasse.py  meta_monitor.py  rule_engine.py
src/cognitive_hydraulics/llm/: __init__.py  client.py  prompts.py  schemas.py
src/cognitive_hydraulics/memory/: __init__.py  chroma_store.py  chunk.py
src/cognitive_hydraulics/operators/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: __init__.py  test_cognitive_flow.py  test_evolutionary_fallback.py  test_evolutionary_integration.py  test_no_change_impasse.py
tests/unit/: __init__.py  test_actr_resolver.py  test_actr_resolver_history_penalty.py  test_chunk.py  test_config.py  test_config_evolution.py  test_context_manager.py  test_evaluator.py  test_evolution.py  test_evolution_prompts.py  test_llm_client.py  test_llm_prompts.py  test_llm_schemas.py  test_meta_monitor.py  test_meta_monitor_thinking.py  test_operators.py  test_rule_engine.py  test_safety_approval.py  test_safety_middleware.py  test_state.py  test_tree_sitter_utils.py  test_verbosity.py  test_working_memory.py  test_working_memory_action_counts.py
(+6 files in other folders)
